--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 .weather-card{
     background-color:rgba(255,255,255,0.95);
-    border: radius 20px;
+    border-radius: 20px;
     padding:20px;
     box-shadow:0 0 30px rgba(0,0,0,0.1);
     transition:transform 0.3s ease-in-out;
