--- a/style.css
+++ b/style.css
@@ -1,76 +1,90 @@
-body{
-    margin:0;
-    font-family:'Montserrat',sans-serif;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    background: linear-gradient(to right,#4CAF50,#2196F3);
+
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: linear-gradient(to right, #4CAF50, #2196F3);
 }
-.container{
-    text-align:center;
+
+.container {
+    text-align: center;
 }
-.weather-card{
-    background-color:rgba(255,255,255,0.95);
+
+.weather-card {
+    background-color: rgba(255, 255, 255, 0.95);
     border-radius: 20px;
-    padding:20px;
-    box-shadow:0 0 30px rgba(0,0,0,0.1);
-    transition:transform 0.3s ease-in-out;
-    width:450px;
-}
-.weather-card:hover{
-    transform:scale(1.05);
-}
-#city-input{
-    padding:15px;
-    margin:10px 0;
-    width:70%;
-    border:1px solid #ccc;
-    border-radius:5px;
-    font-size:16px;
-}
-#city-input:focus{
-    outline:none;
-    border-color:#2196F3;
-}
-#city-input::placeholder{
-    color:#aaa;
-}
-#city-input-btn{
-    padding:10px;
-    background-color:#2196F3;
-    color:#fff;
-    border:none;
-    border-radius:16px;
-    font-size:16px;
-    cursor:pointer;
+    padding: 20px;
+    width: 450px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
 }
 
-#city-input-btn:hover{
-    background-color:#1565C0;
+.weather-card:hover {
+    transform: scale(1.05);
 }
-#weather-info{
-    display:none;
+
+#city-input {
+    padding: 15px;
+    margin: 10px 0;
+    width: 70%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
 }
-#weather-icon{
-    width:100px;
-    height:100px;
+
+#city-input:focus {
+    outline: none;
+    border-color: #2196F3;
 }
-#temperature{
-    font-size:24px;
-    font-weight:bold;
-    margin:8px 0;
+
+#city-input::placeholder {
+    color: #aaa;
 }
+
+#city-input-btn {
+    padding: 10px;
+    background-color: #2196F3;
+    color: #fff;
+    border: none;
+    border-radius: 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#city-input-btn:hover {
+    background-color: #1565C0;
+}
+
+#weather-info {
+    display: none;
+    margin-top: 20px;
+}
+
+#weather-icon {
+    width: 100px;
+    height: 100px;
+}
+
+#temperature {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 8px 0;
+}
+
 #description {
-    font-size:18px;
-    margin-bottom:10px;
+    font-size: 18px;
+    margin-bottom: 10px;
 }
 
-#wind-speed{
-    font-size:16px;
-    color:rgb(255,0,0);
+#wind-speed {
+    font-size: 16px;
+    color: rgb(255, 0, 0);
 }
-#date{
-    font-size:14px;
-    color:rgb(255,0,0);
+
+#date {
+    font-size: 14px;
+    color: rgb(255, 0, 0);
 }
